force-app/main/default/objects/New_Product_entry__e/New_Product_entry__e.object-meta.xml
<CustomObject>
    <label>New Product entry</label>
    <pluralLabel>New Product entries</pluralLabel>
</CustomObject>