force-app/main/default/objects/New_Product_entry__e/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <label>ProductCategory</label>
    <length>10</length>
    <type>Text</type>
</CustomField>