force-app/main/default/objects/New_Product_entry__e/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <label>ProductId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>