force-app/main/default/objects/New_Product_entry__e/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>ProductName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>