force-app/main/default/objects/New_Product_entry__e/fields/ProductPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductPrice__c</fullName>
    <label>ProductPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>